<resources>
    <string name="app_name">StoryIn</string>
    <string name="login">Masuk</string>
    <string name="not_have_account">Belum memiliki akun?</string>
    <string name="register">Daftar</string>
    <string name="app_titlle">StoryIn</string>
    <string name="app_title_description">Masuk ke akunmu dan mulailah bagikan pengalaman menarikmu bersama kami!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="app_icon">App Icon</string>
    <string name="dicoding_submission">Dicoding Submission</string>
    <string name="author">Muhammad Juzairi Safitli</string>
    <string name="have_account">Sudah memiliki akun?</string>
    <string name="have_account_button_text">Masuk dengan akunmu</string>
    <string name="username">Username</string>
    <string name="login_title">Login</string>
    <string name="app_title_description_register">Daftarkan dirimu dan mulailah berbagi cerita bersama kami!</string>
    <string name="welcome_description">Baca dan berbagi pengalaman menarik dari StoryIn. Masuk atau daftar untuk mulai menjelajah cerita unik dari ribuan orang!</string>
    <string name="welcome_picture">gambar welcome</string>
    <string name="home_title">Beranda</string>
    <string name="title_profile">Profil</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_story">Tambah Cerita</string>
    <string name="text_enbled_button_add_story">Tambahkan cerita!</string>
    <string name="text_disable_button_add_story">Ceritakan cerita anda terlebih dahulu</string>
    <string name="text_enabled_button_login">Login</string>
    <string name="text_disabled_button_login">Anda Belum Mengisi Data</string>
    <string name="text_enabled_button_register">Register</string>
    <string name="text_disabled_button_register">Anda Belum Mengisi Data</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="password_error_length">Password tidak boleh kurang dari 8 karakter</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="login_succes_dialog">Login berhasil</string>
    <string name="login_failed_dialog">Login gagal: %1$s</string>
    <string name="login_error_messege">Terjadi kesalahan saat login</string>
    <string name="photo_picker_title">Photo picker</string>
    <string name="no_photo_selected">Tidak ada foto yang dipilih</string>
    <string name="camera_title">Camera</string>
    <string name="failed_take_photo">Gagal mengambil gambar</string>
    <string name="acces_granted">Izin diberikan</string>
    <string name="acces_denied">Izin ditolak</string>
    <string name="add_story_failed_dialog">Terjadi kesalahan: %1$s</string>
    <string name="pick_or_capture_photo_dialog">Silakan pilih atau ambil gambar terlebih dahulu</string>
    <string name="photo_picker_not_available">Photo picker tidak tersedia di perangkat ini</string>
    <string name="failed_start_camera">Gagal memunculkan kamera</string>
    <string name="failed_load_story_detail">Gagal memuat detail cerita</string>
    <string name="failed_load_story">Gagal memuat cerita</string>
    <string name="welcome_user">Selamat datang, %1$s!</string>
    <string name="register_succes">Registrasi berhasil!</string>
    <string name="register_error">Terjadi kesalahan saat registrasi</string>
    <string name="register_error_with_error_messege">Terjadi kesalahan saat registrasi: %1$s</string>
    <string name="icon_switch_camera">icon putar kamera</string>
    <string name="icon_take_photo">icon ambil gambar</string>
    <string name="create_by_name">Nama penulis</string>
    <string name="date">Tanggal</string>
    <string name="story_description">Deskripsi cerita</string>
    <string name="add_story">Tambahkan Cerita</string>
    <string name="banner_description_add_story">Gambar banner tambahkan cerita</string>
    <string name="app_title">StoryIn</string>
    <string name="banner_add_story_description">Bagikan cerita anda sekarang, untuk menginspirasi semua orang!</string>
    <string name="text_pick_or_take_photo">Pilih atau ambil foto menarik untuk cerita terbaik anda!</string>
    <string name="galery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="preview_image_description">Preview gambar</string>
    <string name="start_your_story_now">Mulai ceritakan cerita menarik anda!</string>
    <string name="type_here">Ceritakan di sini</string>
    <string name="title_welcome_user">Selamat datang!</string>
    <string name="ready_for_read_story">Bersiap untuk membaca cerita menarik hari ini?</string>
    <string name="banner_image_welcome_home">Banner gambar welcome home</string>
    <string name="banner_description_fragment_home">Cerita dari banyak orang, dengarkan dan rasaakan keseruan mereka!</string>
    <string name="new_story_today">Cerita terbaru hari ini</string>
    <string name="title_fragment_profile">Profil anda</string>
    <string name="banner_image_profile">Gambar banner profil</string>
    <string name="user_id_title">User ID</string>
    <string name="username_title">Username</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">deskripsi widget</string>
    <string name="title_setting">Pengaturan</string>
    <string name="logout_title">Logout</string>
    <string name="dark_mode_title">Mode gelap</string>
    <string name="language">Bahasa</string>
    <string name="logout_confirmation">Apakah anda yakin ingin logout?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="no_story_widget">Tidak ada cerita</string>
    <string name="story_description_widget">Deskripsi cerita</string>
    <string name="story_image_widget">gamber cerita widget</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="description_banner_2_home">Cerita dari seluruh wilayah Indonesia! Penasaran dari daerah mana aja? Cari tahu sekarang!</string>
    <string name="button_text_banner_2_home">Cari tahu!</string>
    <string name="image_view_banner_2_home">gambar banner 2 home</string>
    <string name="switch_text_location">Tampilkan lokasi saya</string>
    <string name="item_msg_error_text">Tidak dapat memuat cerita</string>
    <string name="retry_item_story_button_text">Muat Lagi</string>
    <string name="location_not_found">Lokasi anda tidak dapat ditemukan</string>
    <string name="location_permission_denied">Izin akses lokasi ditolak\n</string>
    <string name="text_location">Lokasi</string>
    <string name="no_location_story">"Tidak ada lokasi, "</string>
</resources>