<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".view.main.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/iv_app_icon_welcome"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/welcome_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcomepicture" />

    <TextView
        android:id="@+id/tv_title_splash_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:fontFamily="@font/poppins"
        android:text="@string/app_titlle"
        android:textColor="@color/cream"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_app_icon_welcome"
        tools:alpha="100" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_splash_screen"
        tools:alpha="100" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:background="@drawable/bg_button_login_register_welcome"
        android:text="@string/register"
        android:textColor="@color/cream"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_dicoding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintVertical_bias="0.0"
        tools:alpha="100" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:alpha="0"
        android:background="@drawable/bg_button_login_register_welcome"
        android:text="@string/login"
        android:textColor="@color/cream"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_dicoding"
        app:layout_constraintEnd_toStartOf="@+id/btn_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintVertical_bias="0.0"
        tools:alpha="100" />

    <TextView
        android:id="@+id/tv_juzairi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/author"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_dicoding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dicoding_submission"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_juzairi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>