<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.profile.ProfileFragment">


    <TextView
        android:id="@+id/tvProfileUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins"
        android:text="@string/title_fragment_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileUser">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/ivProfileUser"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/banner_image_profile"
                android:scaleType="center"
                android:src="@drawable/id_card_bro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/app_title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivProfileUser"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_user_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/user_id_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_app_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                app:layout_constraintEnd_toEndOf="@+id/tv_title_user_id"
                app:layout_constraintStart_toStartOf="@+id/tv_title_user_id"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_user_id" />

            <TextView
                android:id="@+id/tv_title_name_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/username_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_user_id"
                app:layout_constraintStart_toStartOf="@+id/tv_user_id"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_id" />

            <TextView
                android:id="@+id/tv_name_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_title_name_user"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="@+id/tv_title_name_user"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_name_user"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/title_setting"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />


    <Button
        android:id="@+id/button_action_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/logout_title"
        android:textColor="@color/white"
        app:icon="@drawable/session_leave_svgrepo_com"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/switch_dark_mode"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_change_language"
        app:layout_constraintTop_toBottomOf="@+id/switch_dark_mode" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dark_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/dark_mode_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_setting"
        app:layout_constraintStart_toStartOf="@+id/tv_title_setting"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_setting"
        app:trackTint="@color/cream"
        app:thumbTint="@color/gray" />

    <Button
        android:id="@+id/button_change_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/language"
        android:textColor="@color/white"
        app:icon="@drawable/language_translation_svgrepo_com"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button_action_logout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/switch_dark_mode"
        app:layout_constraintTop_toBottomOf="@+id/switch_dark_mode" />
</androidx.constraintlayout.widget.ConstraintLayout>